Added new screens, tabbarcontroller, navigation controller, button, imageView and segues.

--- a/UserAuthorizationApp/Storyboards/Base.lproj/Main.storyboard
+++ b/UserAuthorizationApp/Storyboards/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Login View Controller-->
+        <!--Item-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="UserAuthorizationApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -42,7 +42,6 @@
                                         <state key="normal" title="Log in"/>
                                         <connections>
                                             <action selector="logInPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="saU-gu-Eud"/>
-                                            <segue destination="oDG-YM-U9q" kind="presentation" modalPresentationStyle="fullScreen" id="xT1-FT-BbX"/>
                                         </connections>
                                     </button>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="75" translatesAutoresizingMaskIntoConstraints="NO" id="Usa-gj-8fs">
@@ -78,16 +77,18 @@
                             <constraint firstItem="jQS-PV-Z4j" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="y2D-QC-nTg"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="VJQ-1d-pnF"/>
                     <connections>
                         <outlet property="passwordTextField" destination="65d-PF-XE6" id="log-FI-PSo"/>
                         <outlet property="userNameTextField" destination="aKr-nl-02h" id="uSG-oQ-qLa"/>
+                        <segue destination="Vf7-MX-Hr9" kind="presentation" identifier="showWelcomeVC" modalPresentationStyle="fullScreen" id="j0C-gU-n8w"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="64.799999999999997" y="-27.436281859070466"/>
+            <point key="canvasLocation" x="1004" y="-27.436281859070466"/>
         </scene>
-        <!--Welcome View Controller-->
+        <!--Home-->
         <scene sceneID="LUQ-B6-s6g">
             <objects>
                 <viewController id="oDG-YM-U9q" customClass="WelcomeViewController" customModule="UserAuthorizationApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -111,7 +112,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vEX-PW-Ze7">
-                                <rect key="frame" x="152.5" y="519" width="70" height="35"/>
+                                <rect key="frame" x="152.5" y="470" width="70" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="FKm-mn-MBU"/>
                                 </constraints>
@@ -134,6 +135,7 @@
                             <constraint firstItem="Kly-Y8-sRt" firstAttribute="centerX" secondItem="SgX-du-kP3" secondAttribute="centerX" id="pJ3-Lz-IuL"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Home" image="homekit" catalog="system" id="7fJ-ms-tUt"/>
                     <connections>
                         <outlet property="welcomeLabel" destination="Kly-Y8-sRt" id="iba-0U-Yve"/>
                     </connections>
@@ -141,10 +143,110 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LJE-cG-hFE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="naO-Bh-MHY" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="802" y="-27"/>
+            <point key="canvasLocation" x="1004" y="748"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="ivF-8u-O9a">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Vf7-MX-Hr9" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="oxV-tB-Lhu"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="4K0-Go-4nv">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="oDG-YM-U9q" kind="relationship" relationship="viewControllers" id="QZ6-XQ-sJ6"/>
+                        <segue destination="KRu-hb-u9U" kind="relationship" relationship="viewControllers" id="sB7-jm-vBh"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bAF-l4-99K" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1825" y="-27"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="XOl-O8-FyD">
+            <objects>
+                <viewController id="6gs-bo-Gad" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="MrZ-1Y-pAd">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fa3-ss-qfQ">
+                                <rect key="frame" x="151" y="315.5" width="73" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Mor Info"/>
+                                <connections>
+                                    <segue destination="ck5-p1-qNu" kind="show" id="cft-UM-wmC"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Idz-my-s25"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Fa3-ss-qfQ" firstAttribute="centerX" secondItem="MrZ-1Y-pAd" secondAttribute="centerX" id="FLh-ng-Iox"/>
+                            <constraint firstItem="Fa3-ss-qfQ" firstAttribute="centerY" secondItem="MrZ-1Y-pAd" secondAttribute="centerY" id="LqH-Lq-axS"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="mkc-2K-kUh"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="meL-FX-iO2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2777" y="748"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="bfH-pQ-ok7">
+            <objects>
+                <viewController id="ck5-p1-qNu" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="p4J-Jf-PKi">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WSU-Ut-cji">
+                                <rect key="frame" x="62.5" y="208.5" width="250" height="250"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="250" id="C4R-7d-ETF"/>
+                                    <constraint firstAttribute="width" constant="250" id="Nrn-Hc-lFN"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="dFu-jE-99M"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="WSU-Ut-cji" firstAttribute="centerY" secondItem="p4J-Jf-PKi" secondAttribute="centerY" id="1fi-4S-I8q"/>
+                            <constraint firstItem="WSU-Ut-cji" firstAttribute="centerX" secondItem="p4J-Jf-PKi" secondAttribute="centerX" id="RQd-au-wPb"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="sKk-lW-XAq"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tKi-hH-7kU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3548" y="748"/>
+        </scene>
+        <!--User-->
+        <scene sceneID="G6n-5V-tjV">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="KRu-hb-u9U" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="User" image="person.fill" catalog="system" id="KUm-ap-FUj"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="bFD-j8-dpc">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="6gs-bo-Gad" kind="relationship" relationship="rootViewController" id="QBw-HN-ssy"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sbt-Qe-Awj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1954" y="748"/>
         </scene>
     </scenes>
     <resources>
+        <image name="homekit" catalog="system" width="128" height="104"/>
+        <image name="person.fill" catalog="system" width="128" height="120"/>
         <systemColor name="opaqueSeparatorColor">
             <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
