--- a/UserAuthorizationApp/Storyboards/Base.lproj/Main.storyboard
+++ b/UserAuthorizationApp/Storyboards/Base.lproj/Main.storyboard
@@ -62,7 +62,7 @@
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                 <state key="normal" title="Forgot Password?"/>
                                                 <connections>
-                                                    <action selector="forgotPassword" destination="BYZ-38-t0r" eventType="touchUpInside" id="ec8-nJ-csN"/>
+                                                    <action selector="forgotRegisterData" destination="BYZ-38-t0r" eventType="touchUpInside" id="ec8-nJ-csN"/>
                                                 </connections>
                                             </button>
                                         </subviews>
